--- a/frontend/tsconfig.node.json
+++ b/frontend/tsconfig.node.json
@@ -21,5 +21,6 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true
   },
-  "include": ["frontend/vite.config.ts"]
+  "extends": "./tsconfig.json",
+  "include": ["vite.config.ts"]
 }
