--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,14 +1,14 @@
 server {
     listen 80;
     server_name localhost;
-
+    
     location / {
         root /usr/share/nginx/html;
         index index.html;
         try_files $uri $uri/ /index.html;
     }
 
-    # Proxy API requests to your backend
+    # Proxy API requests to backend
     location /api {
         proxy_pass http://backend:10000;
         proxy_set_header Host $host;
